--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" />
-  <script src="anime.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-6uPZXIhDEGCkIG6ZrNe4XlffTgTZQee2bSEBEhKov2cGPRAAqZRXajyN0Z+e3q6yYe0o8EM2zHPifC/8V4F8ig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 <body>
   <header class="header">
