--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>CI Protegida Uruguay</h1>
+    <h1>CI - Uruguay</h1>
     <p>Protegé tu documento antes de compartirlo</p>
   </header>
 
