--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CI Protegida Uruguay</title>
+  <title>Protección CI Uruguay</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" />
@@ -16,7 +16,7 @@
   </header>
 
   <section class="warning">
-    ⚠️ Este documento contiene datos sensibles. No lo compartas sin protección.
+    ⚠️ Tu documento contiene datos sensibles. No lo compartas sin protección.
   </section>
 
   <main>
@@ -38,7 +38,7 @@
   </main>
 
   <footer>
-    Basado en SafeID · Adaptado para Uruguay 🇺🇾 · neurus808
+    Inspirado en SafeID · Adaptado para Uruguay 🇺🇾 · h4ndshake
   </footer>
 
   <script src="script.js"></script>
