Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </main>
 
   <footer>
-    Inspirado en SafeID · Adaptado para Uruguay 🇺🇾 · h4ndshake
+    Proyecto adaptado para usar con documento Uruguayo  · h4ndshake
   </footer>
 
   <script src="script.js"></script>
