--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CI Protegida Uruguay</title>
+  <title>CI | Uruguay</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" />
 </head>
 <body>
   <header>
-    <h1>CI Protegida Uruguay</h1>
+    <h1>Cuidá tu Identidad | Uruguay</h1>
     <p>Protegé tu documento antes de compartirlo</p>
   </header>
   <section class="alert">
-    ⚠️ Este documento contiene datos sensibles. No lo compartas sin protección.
+⚠️ Tu documento contiene datos personales. Protegelos antes de compartirlo.
   </section>
   <main>
     <div class="tools">
@@ -26,7 +26,7 @@
         <option value="pixel">Pixelado</option>
       </select>
       <button onclick="download()">Descargar</button>
-      <button onclick="resetCanvas()">Reset</button>
+      <button onclick="resetCanvas()">Volver a empezar</button>
     </div>
     <div class="canvas-container">
       <canvas id="canvas"></canvas>
@@ -34,7 +34,9 @@
     </div>
   </main>
   <footer>
-    Basado en SafeID · Adaptado para Uruguay 🇺🇾 · neurus808
+
+Proyecto  desarrollado por H4, inspirado en Saferlayer.com y en SafeID. Adaptado específicamente para el caso de uso de la cedula de identidad de Uruguay.
+
   </footer>
   <script src="script.js"></script>
 </body>
