--- a/index.html
+++ b/index.html
@@ -3,41 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CI | Uruguay</title>
+  <title>Cuida tu Identidad - CI</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="icon-192.png" />
 </head>
 <body>
   <header>
-    <h1>Cuidá tu Identidad | Uruguay</h1>
-    <p>Protegé tu documento antes de compartirlo</p>
+    <h1>Cuida tu Identidad</h1>
+    <p>Protegé tu CI antes de compartirla</p>
   </header>
-  <section class="alert">
-⚠️ Tu documento contiene datos personales. Protegelos antes de compartirlo.
-  </section>
-  <main>
-    <div class="tools">
+
+  <main class="card">
+    <div class="drop-area" id="drop-area">
+      <p>📷 Arrastrá una imagen o tocá para seleccionar</p>
       <input type="file" id="upload" accept="image/*" />
-      <input type="text" id="watermark" placeholder="Marca de agua..." />
-      <select id="tool">
-        <option value="draw">Pincel</option>
-        <option value="blur">Blur</option>
-        <option value="pixel">Pixelado</option>
-      </select>
-      <button onclick="download()">Descargar</button>
-      <button onclick="resetCanvas()">Volver a empezar</button>
     </div>
+
+    <input type="text" id="watermark" placeholder="Marca de agua (ej: para uso de juan@example.com)" />
+
+    <select id="tool">
+      <option value="draw">Pincel</option>
+      <option value="pixel">Pixelado</option>
+    </select>
+
+    <div class="actions">
+      <button onclick="download()">Descargar</button>
+      <button onclick="resetCanvas()">Reset</button>
+      <label><input type="checkbox" id="toggleOverlay" checked /> Mostrar guía visual</label>
+    </div>
+
     <div class="canvas-container">
       <canvas id="canvas"></canvas>
-      <img id="overlay" src="overlay.png" alt="Guía visual" />
+      <img id="overlay" src="overlay.png" alt="Guía CI" />
     </div>
+
+    <p class="note">🔒 La imagen se procesa localmente en tu dispositivo. No se sube ningún dato.</p>
   </main>
+
   <footer>
-
-Proyecto  desarrollado por H4, inspirado en Saferlayer.com y en SafeID. Adaptado específicamente para el caso de uso de la cedula de identidad de Uruguay.
-
+    Proyecto abierto · Uruguay 🇺🇾 · neurus808
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
