--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>
         Aplicación web libre para proteger tu Cédula de Identidad antes de compartirla. Tapá datos personales, agregá marcas de agua, y exportá con seguridad.
       </p>
-      <a href="https://neurus808.github.io/ci-uruguay" target="_blank" class="btn">Ir a la herramienta</a>
+      <a href="https://neurus808.github.io/marcodeciberseguridad/ci-uruguay" target="_blank" class="btn">Ir a la herramienta</a>
     </div>
   </section>
 
