--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,26 +14,31 @@
 
   <section class="intro">
     <p>
-      Este sitio toma como referencia el <strong>Marco de Ciberseguridad de AGESIC</strong>, con el objetivo de acercar conocimiento, buenas prácticas y herramientas accesibles para todos los ciudadanos.
+      Este sitio toma como referencia el <strong>Marco de Ciberseguridad de AGESIC</strong>, con el objetivo de acercar conocimiento, buenas prácticas y herramientas digitales a toda la ciudadanía.
     </p>
     <p>
-      Creemos que una sociedad más informada es una sociedad más segura.
+      Creemos que una sociedad informada es una sociedad más segura.
     </p>
   </section>
 
   <section class="proyectos">
     <h2>Herramientas y proyectos</h2>
+
     <div class="card">
       <h3>CI Uruguay – Cuida tu Identidad</h3>
       <p>
-        Aplicación web libre para proteger tu Cédula de Identidad antes de compartirla. Tapá datos personales, agregá marcas de agua, y exportá con seguridad.
+        Aplicación web gratuita para proteger tu Cédula de Identidad antes de compartirla. Ofrece herramientas de anonimización, marcas de agua resistentes a IA y exportación segura.
       </p>
-      <a href="https://neurus808.github.io/marcodeciberseguridad/ci-uruguay" target="_blank" class="btn">Ir a la herramienta</a>
+      <div style="text-align: center;">
+        <a href="https://neurus808.github.io/marcodeciberseguridad/ci-uruguay/" target="_blank" class="btn">
+          Explorar herramienta
+        </a>
+      </div>
     </div>
   </section>
 
   <footer>
-   H4NDSHAKE | URUGUAY
+    HANDSHAKE | URUGUAY
   </footer>
 </body>
 </html>
