--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section class="intro">
     <p>
-      Este sitio toma como referencia el <strong>Marco de Ciberseguridad de AGESIC</strong>, con el objetivo de acercar conocimiento, buenas prácticas y herramientas digitales a toda la ciudadanía.
+      Usamos como referencia el <strong>Marco de Ciberseguridad de AGESIC</strong>, con el objetivo de acercar conocimiento, buenas prácticas y herramientas digitales a toda la ciudadanía.
     </p>
     <p>
       Creemos que una sociedad informada es una sociedad más segura.
