--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Marco de Ciberseguridad</h1>
-    <p>Promoviendo la seguridad de la información para todos</p>
-  </header>
+<header>
+  <img src="logo_marco_ciberseguridad.png" alt="Logo Marco de Ciberseguridad" class="logo" />
+  <h1>marco de ciberseguridad</h1>
+  <p>Promoviendo la seguridad de la información para todos</p>
+</header>
+
 
   <section class="intro">
     <p>
