--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-  <img src="logo_marco_ciberseguridad.png" alt="Logo Marco de Ciberseguridad" class="logo" />
+  <img src="logo.png" alt="Logo Marco de Ciberseguridad" class="logo" />
   <h1>marco de ciberseguridad</h1>
   <p>Promoviendo la seguridad de la información para todos</p>
 </header>
