--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </section>
 
   <section class="proyectos">
-    <h2>Herramientas y proyectos</h2>
+    <h2>Proyectos</h2>
 
     <div class="card">
       <h3>CI Uruguay – Cuida tu Identidad</h3>
