--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <img src="logo.png" alt="Logo Marco de Ciberseguridad" class="logo" />
-  <h1>marco de ciberseguridad</h1>
+  <h1>Marco de Ciberseguridad</h1>
   <p>Promoviendo la seguridad de la información para todos</p>
 </header>
 
