--- a/ci-uruguay/index.html
+++ b/ci-uruguay/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Cuida tu Identidad</h1>
-    <p>Aplicación libre para proteger tu Cédula de Identidad</p>
+    <p>Protegé tu Cédula de Identidad antes de compartirla</p>
   </header>
 
   <main>
