--- a/index.html
+++ b/index.html
@@ -1,46 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marco de Ciberseguridad - Uruguay</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<header>
-  <img src="logo.png" alt="Logo Marco de Ciberseguridad" class="logo" />
-  <h1>Marco de Ciberseguridad</h1>
-  <p>Promoviendo la seguridad de la información para todos</p>
-</header>
-
-
-  <section class="intro">
-    <p>
-      Usamos como referencia el <strong>Marco de Ciberseguridad </strong> de AGESIC, con el objetivo de acercar conocimiento, buenas prácticas y herramientas digitales a toda la ciudadanía.
-    </p>
-    <p>
-      Creemos que una sociedad informada es una sociedad más segura.
-    </p>
-  </section>
-
-  <section class="proyectos">
-    <h2>Proyectos</h2>
-
-    <div class="card">
-      <h3>CI Uruguay – Cuida tu Identidad</h3>
-      <p>
-        Aplicación web gratuita para proteger tu Cédula de Identidad antes de compartirla. Ofrece herramientas de anonimización, marcas de agua resistentes a IA y exportación segura.
-      </p>
-      <div style="text-align: center;">
-        <a href="https://neurus808.github.io/marcodeciberseguridad/ci-uruguay/" target="_blank" class="btn">
-          Explorar herramienta
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    HANDSHAKE | URUGUAY
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marco de Ciberseguridad - Uruguay</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
